# personal-myth-forge

./: .env.example  .gitignore  Makefile  README.md
services/backend/: final-resources.env.example  pyproject.toml
services/backend/scripts/: apply_final_resources.sh  init_final_resources.sh  require_live_provider_consent.sh  require_print_provider_consent.sh  write_backend_env.sh  write_configured_live_evidence_bundle.sh  write_final_acceptance_configured.sh  write_final_acceptance_local.sh  write_final_configured_evidence_plan.sh  write_final_configured_preflight.sh  write_final_demo_launch_configured.sh  write_final_external_action_ledger.sh  write_final_handoff_index.sh  write_final_launch_closure_packet.sh  write_final_local_report_refresh.sh  write_final_resource_apply_preview.sh  write_final_resource_fill_guide.sh  write_final_resource_requirements.sh  write_final_resources_preflight.sh  write_final_showcase_readiness.sh  write_ios_deploy_runbook_local.sh  write_ios_device_evidence_bundle.sh  write_ios_device_launch_certificate.sh  write_ios_device_launch_rehearsal.sh  write_ios_device_launch_rehearsal_readiness.sh  write_live_provider_evidence.sh  write_mobile_deploy_preflight_evidence.sh  write_mobile_xcode_build_evidence.sh  write_print_fulfillment_readiness.sh  write_print_quote_request_configured.sh  write_provider_handoff.sh  write_resource_handoff.sh
services/backend/tests/: conftest.py  test_acceptance.py  test_api_contract.py  test_arkit_scan_generation_acceptance.py  test_backend_env_writer_script.py  test_capture_3d_acceptance.py  test_capture_api.py  (+64 more)
(+1688 files in other folders)
